WebCore:

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15208
          display:table causes the collapsed text to show at a different position when expanded

        Test: fast/table/insert-before-anonymous-ancestors.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::addChild): Rolled out r11579. I think whatever
        that change was supposed to accomplish has since been done in other
        places in the code.

LayoutTests:

        Reviewed by Dave Hyatt.

        - test and updated results for http://bugs.webkit.org/show_bug.cgi?id=15208
          display:table causes the collapsed text to show at a different position when expanded

        * fast/table/form-in-table-before-misnested-text-crash-css-expected.txt:
        * fast/table/form-in-table-before-misnested-text-crash-expected.txt:
        * fast/table/insert-before-anonymous-ancestors.html: Added.
        * fast/table/section-in-table-before-misnested-text-crash-css-expected.txt:
        * fast/table/section-in-table-before-misnested-text-crash-expected.txt:
        * platform/mac/fast/table/insert-before-anonymous-ancestors-expected.checksum: Added.
        * platform/mac/fast/table/insert-before-anonymous-ancestors-expected.png: Added.
        * platform/mac/fast/table/insert-before-anonymous-ancestors-expected.txt: Added.



Canonical link: https://commits.webkit.org/20775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26840 268f45cc-cd09-0410-ab3c-d52691b4dbfc