WebCore/rendering/RenderTable.cpp
@@ -191,13 +191,10 @@ void RenderTable::addChild(RenderObject* child, RenderObject* beforeChild)
     }
 
     RenderObject* lastBox = beforeChild;
-    RenderObject* nextToLastBox = beforeChild;
-    while (lastBox && lastBox->parent()->isAnonymous() && !lastBox->isTableSection() && lastBox->style()->display() != TABLE_CAPTION) {
-        nextToLastBox = lastBox;
+    while (lastBox && lastBox->parent()->isAnonymous() && !lastBox->isTableSection() && lastBox->style()->display() != TABLE_CAPTION)
         lastBox = lastBox->parent();
-    }
     if (lastBox && lastBox->isAnonymous() && !isAfterContent(lastBox)) {
-        lastBox->addChild(child, nextToLastBox);
+        lastBox->addChild(child, beforeChild);
         return;
     }
 
